# WIZ820io_w5500_esphome_patch

./: README.md
components/ethernet_patch/: CMakeLists.txt  __init__.py  ethernet_patch.cpp  ethernet_patch.h  manifest.json
custom_components/ethernet_patch/: ethernet_patch.cpp  ethernet_patch.h
